force-app/main/default/objects/Account/fields/Password_Reset_URL__c.field-meta.xml
<CustomField>
    <fullName>Password_Reset_URL__c</fullName>
    <label>Password Reset URL</label>
    <type>Url</type>
</CustomField>