force-app/main/default/objects/Account/fields/PCU_Call_Priority__c.field-meta.xml
<CustomField>
    <fullName>PCU_Call_Priority__c</fullName>
    <description>Used for PCU Target Creation</description>
    <label>PCU Call Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>