force-app/main/default/objects/Account/fields/Pendo_Number_of_Days_Active__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Number_of_Days_Active__c</fullName>
    <description>Data from Pendo</description>
    <inlineHelpText>Last 30 days</inlineHelpText>
    <label>Pendo Number of Days Active</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>