force-app/main/default/objects/Account/fields/Pendo_Number_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Number_of_Events__c</fullName>
    <description>Data from Pendo</description>
    <label>Pendo Number of Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>