force-app/main/default/objects/Account/fields/Pendo_SRC_Message_Response__c.field-meta.xml
<CustomField>
    <fullName>Pendo_SRC_Message_Response__c</fullName>
    <description>Conversations Message Responses in the last 30 days</description>
    <inlineHelpText>Last 30 days</inlineHelpText>
    <label>Pendo SRC Message Response</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>