force-app/main/default/objects/Account/fields/Pendo_SRC_New_Messages__c.field-meta.xml
<CustomField>
    <fullName>Pendo_SRC_New_Messages__c</fullName>
    <description>New Messages in the Conversation app for the last 30 days</description>
    <inlineHelpText>Last 30 days</inlineHelpText>
    <label>Pendo SRC New Messages</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>