force-app/main/default/objects/Account/fields/Pendo_Time_on_Conversations_App__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Time_on_Conversations_App__c</fullName>
    <description>Data from Pendo</description>
    <inlineHelpText>Last 30 days</inlineHelpText>
    <label>Pendo Time on Conversations App</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>