force-app/main/default/objects/Account/fields/Pipeline_Source__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Source__c</fullName>
    <label>Pipeline Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Partner</fullName>
            </value>
            <value>
                <fullName>Sales Team/Customer</fullName>
            </value>
            <value>
                <fullName>CRM Data</fullName>
            </value>
            <value>
                <fullName>Partner Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>