force-app/main/default/objects/Account/fields/Practice_Management_Description__c.field-meta.xml
<CustomField>
    <fullName>Practice_Management_Description__c</fullName>
    <formula>Practice_Management_Software__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Management Description</label>
    <type>Text</type>
</CustomField>