force-app/main/default/objects/Account/fields/Practice_Management_Software__c.field-meta.xml
<CustomField>
    <fullName>Practice_Management_Software__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the practice management software the customer is using.</description>
    <inlineHelpText>This is the practice management software the customer is using.</inlineHelpText>
    <label>Practice Management Software</label>
    <referenceTo>Management_System__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>