force-app/main/default/objects/Account/fields/Practice_Management_Software_T__c.field-meta.xml
<CustomField>
    <fullName>Practice_Management_Software_T__c</fullName>
    <formula>Practice_Management_Software__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Management Software T</label>
    <type>Text</type>
</CustomField>