force-app/main/default/objects/Account/fields/Practice_Management_Software_Versoin__c.field-meta.xml
<CustomField>
    <fullName>Practice_Management_Software_Versoin__c</fullName>
    <formula>Practice_Management_Software__r.Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Management Software Version</label>
    <type>Text</type>
</CustomField>