force-app/main/default/objects/Account/fields/Practice_Management_SYNC_Availability__c.field-meta.xml
<CustomField>
    <fullName>Practice_Management_SYNC_Availability__c</fullName>
    <formula>Practice_Management_Software__r.SYNC_Availability_Icon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Management SYNC Availability</label>
    <type>Text</type>
</CustomField>