force-app/main/default/objects/Account/fields/Practice_Management_SYNC_Availability_T__c.field-meta.xml
<CustomField>
    <fullName>Practice_Management_SYNC_Availability_T__c</fullName>
    <formula>text(Practice_Management_Software__r.SYNC_Availability__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Management SYNC Availability T</label>
    <type>Text</type>
</CustomField>