force-app/main/default/objects/Account/fields/Practice_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Practice_Software_Version__c</fullName>
    <label>Practice Software Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>