force-app/main/default/objects/Account/fields/Primary_Partner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Partner Account)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>