force-app/main/default/objects/Account/fields/Probable_Most_Recent_K_Date__c.field-meta.xml
<CustomField>
    <fullName>Probable_Most_Recent_K_Date__c</fullName>
    <description>Stores the most recent contract date</description>
    <inlineHelpText>This is the date the contract was likely signed</inlineHelpText>
    <label>Most Recent Contract Date</label>
    <type>Date</type>
</CustomField>