force-app/main/default/objects/Account/fields/qbdialer__CloseDate__c.field-meta.xml
<CustomField>
    <fullName>qbdialer__CloseDate__c</fullName>
    <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
    <label>NeuralView: Close Score Last Updated</label>
    <type>DateTime</type>
</CustomField>