force-app/main/default/objects/Account/fields/qbdialer__Dials__c.field-meta.xml
<CustomField>
    <fullName>qbdialer__Dials__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  Any manual changes will be overwritten.</description>
    <label>Dials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>