force-app/main/default/objects/Account/fields/qbdialer__LastCallTime__c.field-meta.xml
<CustomField>
    <fullName>qbdialer__LastCallTime__c</fullName>
    <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  Any manual changes will be overwritten.</description>
    <label>Last Call Time</label>
    <type>DateTime</type>
</CustomField>