force-app/main/default/objects/Account/fields/qbdialer__TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>qbdialer__TimeZoneSidKey__c</fullName>
    <description>This field will store the TimeZoneSidKey for the Account.</description>
    <label>TimeZone Sid Key</label>
    <length>24</length>
    <type>Text</type>
</CustomField>