force-app/main/default/objects/Account/fields/Receives_Phone_Support__c.field-meta.xml
<CustomField>
    <fullName>Receives_Phone_Support__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to determine who will receive phone support</description>
    <label>Receives Phone Support</label>
    <type>Checkbox</type>
</CustomField>