force-app/main/default/objects/Account/fields/RecurSoft__Active_Subscription__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Active_Subscription__c</fullName>
    <formula>IMAGE( 
(IF( ISBLANK( RecurSoft__Cancelled_Date__c ) ,&quot;/img/samples/flag_green.gif&quot;,&quot;/img/samples/flag_red.gif&quot;)), &quot;&quot;)</formula>
    <inlineHelpText>Indicates whether the account has active billing (green flag) or if billing has been cancelled (red flag).</inlineHelpText>
    <label>Active Subscription</label>
    <type>Text</type>
</CustomField>