force-app/main/default/objects/Account/fields/RecurSoft__Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Anniversary_Date__c</fullName>
    <inlineHelpText>Date on which the first closed-won opportunity on the account is set to renew.</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>