force-app/main/default/objects/Account/fields/RecurSoft__Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default Bill to Account for usage billing.</inlineHelpText>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Bill to Account)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>