force-app/main/default/objects/Account/fields/RecurSoft__Billing_Automation_On__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Billing_Automation_On__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Determines whether the automated invoicing process should fire or not for this account.</inlineHelpText>
    <label>Billing Automation On</label>
    <type>Checkbox</type>
</CustomField>