force-app/main/default/objects/Account/fields/RecurSoft__Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Billing_Email__c</fullName>
    <inlineHelpText>Primary billing email.</inlineHelpText>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>