force-app/main/default/objects/Account/fields/RecurSoft__Billing_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Billing_Email_CC__c</fullName>
    <inlineHelpText>Secondary billing email.</inlineHelpText>
    <label>Billing Email CC</label>
    <type>Email</type>
</CustomField>