force-app/main/default/objects/Account/fields/RecurSoft__Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Cancelled_Date__c</fullName>
    <inlineHelpText>No active billing on the account starting with this date.</inlineHelpText>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>