force-app/main/default/objects/Account/fields/RecurSoft__Channel__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Channel__c</fullName>
    <description>This field is mapped to the Class dimension in Intacct.</description>
    <inlineHelpText>Maps to the class dimension ID within Intacct.</inlineHelpText>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <default>true</default>
                <label>100</label>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>