force-app/main/default/objects/Account/fields/RecurSoft__Customer_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Customer_Active_Date__c</fullName>
    <description>This field is used to record the date on which the account was converted to a customer.  This is defined by the first date they ever signed a contract with us.</description>
    <inlineHelpText>The date when the first opportunity was set to closed-won for the account, and the first Product Subscription was generated.</inlineHelpText>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>