force-app/main/default/objects/Account/fields/RecurSoft__Default_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Default_Payment_Type__c</fullName>
    <inlineHelpText>Default payment method.</inlineHelpText>
    <label>Default Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
                <default>true</default>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Other (Check etc.)</fullName>
            </value>
            <value>
                <fullName>Paid by other Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>