force-app/main/default/objects/Account/fields/RecurSoft__Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Determines whether customer records are created at the root or entity level in Intacct.</inlineHelpText>
    <label>Intacct Entity</label>
    <referenceTo>RecurSoft__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>RecurSoft_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>