force-app/main/default/objects/Account/fields/RecurSoft__Intacct_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_Vendor_ID__c</fullName>
    <inlineHelpText>The Intacct ID of the vendor.</inlineHelpText>
    <label>Intacct Vendor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>