force-app/main/default/objects/Account/fields/RecurSoft__Intacct_Vertical__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_Vertical__c</fullName>
    <inlineHelpText>Intacct Location Dimension.</inlineHelpText>
    <label>Intacct Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>