force-app/main/default/objects/Account/fields/RecurSoft__IntacctID__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__IntacctID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The Intacct ID of the customer.</inlineHelpText>
    <label>Intacct Customer ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>