force-app/main/default/objects/Account/fields/RecurSoft__Invoicing_Type__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Invoicing_Type__c</fullName>
    <label>Invoicing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>By Opportunity</fullName>
            </value>
            <value>
                <fullName>By Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>