force-app/main/default/objects/Account/fields/RecurSoft__Is_Top_Level_Parent__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Is_Top_Level_Parent__c</fullName>
    <description>Identifier to indicate this account is a top-level parent.</description>
    <formula>IF( ParentId = &quot;&quot;,&quot;True&quot;,&quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Top Level Parent</label>
    <type>Text</type>
</CustomField>