force-app/main/default/objects/Account/fields/RecurSoft__No_of_Aggregated_Opp_Products__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__No_of_Aggregated_Opp_Products__c</fullName>
    <inlineHelpText>Used for Aggregated monthly minimum amount type of usage.</inlineHelpText>
    <label>Deprecated-No of Aggregated Opp Products</label>
    <summaryFilterItems>
        <field>Opportunity.RecurSoft__Count_Aggregated_Monthly_Min__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Prospecting</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>