force-app/main/default/objects/Account/fields/RecurSoft__NumberofLocations__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__NumberofLocations__c</fullName>
    <inlineHelpText>Number of Intacct locations.</inlineHelpText>
    <label>Deprecated - Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>