force-app/main/default/objects/Account/fields/RecurSoft__On_Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__On_Credit_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box places the account on Credit Hold.</description>
    <inlineHelpText>This box can be checked to indicate if an account is on credit hold.</inlineHelpText>
    <label>Deprecated - On Credit Hold</label>
    <type>Checkbox</type>
</CustomField>