force-app/main/default/objects/Account/fields/RecurSoft__Partner_Default_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Partner_Default_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>RecurSoft_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>