force-app/main/default/objects/Account/fields/RecurSoft__Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Payment_Term__c</fullName>
    <inlineHelpText>As with all values that impact the creation of invoices in Intacct, this and other account fields equivalent to fields in Intacct must match Intacct. Values that are missing or incorrectly mapped will result in failed revenue schedules.</inlineHelpText>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due Upon Receipt</fullName>
                <default>true</default>
                <label>Due Upon Receipt</label>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>