force-app/main/default/objects/Account/fields/RecurSoft__Primary_Partner__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Primary_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deprecated - Primary Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Partner Account)</relationshipLabel>
    <relationshipName>RecurSoft_Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>