force-app/main/default/objects/Account/fields/RecurSoft__Product_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Product_Cancelled__c</fullName>
    <inlineHelpText>Number of terminated subscriptions on the account.</inlineHelpText>
    <label>Product Cancelled</label>
    <summarizedField>RecurSoft__Product_Subscription__c.RecurSoft__Product_Cancelled__c</summarizedField>
    <summaryForeignKey>RecurSoft__Product_Subscription__c.RecurSoft__Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>