force-app/main/default/objects/Account/fields/RecurSoft__Ready_to_sync_with_Intacct__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Ready_to_sync_with_Intacct__c</fullName>
    <formula>IMAGE(
(IF(AND( !ISBLANK( TEXT(RecurSoft__Payment_Term__c)),!ISBLANK( RecurSoft__Intacct_Entity__c ),!ISBLANK( RecurSoft__Billing_Email__c )),&quot;/img/samples/flag_green.gif&quot;,&quot;/img/samples/flag_red.gif&quot;)), &quot;&quot;)</formula>
    <inlineHelpText>Account has all necessary information for syncing with Intacct.</inlineHelpText>
    <label>Ready to sync with Intacct</label>
    <type>Text</type>
</CustomField>