force-app/main/default/objects/Account/fields/RecurSoft__Secondary_Partner__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Secondary_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deprecated - Secondary Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Secondary Partner)</relationshipLabel>
    <relationshipName>RecurSoft_Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>