force-app/main/default/objects/Account/fields/RecurSoft__Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default Ship to Contact for usage billing.</inlineHelpText>
    <label>Ship to Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <filterItems>
            <field>$Source.RecurSoft__Bill_to_Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.RecurSoft__Bill_to_Account__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Ship to Contact)</relationshipLabel>
    <relationshipName>RecurSoft_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>