force-app/main/default/objects/Account/fields/RecurSoft__SLA__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__SLA__c</fullName>
    <inlineHelpText>Service Level Agreement</inlineHelpText>
    <label>Deprecated - SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>