force-app/main/default/objects/Account/fields/RecurSoft__Status__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Status__c</fullName>
    <description>Picklist used to determine if an account is an active customer.</description>
    <inlineHelpText>Determined by the status of subscriptions (not created, created, not activated, or cancelled)</inlineHelpText>
    <label>ISB Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>