force-app/main/default/objects/Account/fields/RecurSoft__Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Subscriber_ID__c</fullName>
    <label>Deprecated - Subscriber ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>