force-app/main/default/objects/Account/fields/RecurSoft__Synced_With_Intacct__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Synced_With_Intacct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Status of the account synchnronization with Intacct.</inlineHelpText>
    <label>Synced With Intacct</label>
    <type>Checkbox</type>
</CustomField>