force-app/main/default/objects/Account/fields/RecurSoft__Synced_With_Intacct_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Synced_With_Intacct_Date__c</fullName>
    <inlineHelpText>Date of the account synchnronization with Intacct.</inlineHelpText>
    <label>Synced With Intacct Date</label>
    <type>DateTime</type>
</CustomField>